@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 1.49 - Sat Oct 03 2020
+
+    * Add station Jaderberg
+
 Travel::Status::DE::IRIS 1.48 - Sat Aug 22 2020
 
     * Add stations Neuruppin Seedamm (temporary, teardown expected Dec 2020),
